--- a/week2/lab_cancer/Machine_Learning_Week2 Lab.ipynb
+++ b/week2/lab_cancer/Machine_Learning_Week2 Lab.ipynb
@@ -3766,7 +3766,9 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
