--- a/week2/ass/ass2_best_parameters_an_features.ipynb
+++ b/week2/ass/ass2_best_parameters_an_features.ipynb
@@ -2284,35 +2284,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SelectFromModel(estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "SelectFromModel(estimator=SelectFromModel(estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
        "            max_depth=None, max_features='log2', max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=5, n_jobs=1,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
+       " ...None, verbose=0,\n",
        "            warm_start=False),\n",
+       "        norm_order=1, prefit=False, threshold=0.038),\n",
        "        norm_order=1, prefit=False, threshold=0.038)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_rf_best =  SelectFromModel (model_rf, threshold=0.038)\n",
+    "model_rf_best =  SelectFromModel (model_rf_best, threshold=0.038)\n",
     "model_rf_best.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2321,10 +2321,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "      dance       0.74      0.80      0.77       455\n",
-      "       jazz       0.85      0.92      0.88       437\n",
-      "        rap       0.83      0.84      0.83       455\n",
-      "       rock       0.83      0.68      0.75       453\n",
+      "      dance       0.77      0.83      0.80       455\n",
+      "       jazz       0.83      0.90      0.86       437\n",
+      "        rap       0.86      0.85      0.85       455\n",
+      "       rock       0.78      0.66      0.71       453\n",
       "\n",
       "avg / total       0.81      0.81      0.81      1800\n",
       "\n"
@@ -2340,32 +2340,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RFE(estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+      "RFE(estimator=SelectFromModel(estimator=SelectFromModel(estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
       "            max_depth=None, max_features='log2', max_leaf_nodes=None,\n",
       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "            min_samples_leaf=1, min_samples_split=2,\n",
-      "            min_weight_fraction_leaf=0.0, n_estimators=5, n_jobs=1,\n",
-      "            oob_score=False, random_state=None, verbose=0,\n",
+      " ...None, verbose=0,\n",
       "            warm_start=False),\n",
+      "        norm_order=1, prefit=False, threshold=0.038),\n",
+      "        norm_order=1, prefit=False, threshold=0.038),\n",
       "  n_features_to_select=10, step=1, verbose=0)\n"
      ]
     }
    ],
    "source": [
-    "rfe_model= RFE(model_rf, n_features_to_select=10)\n",
+    "rfe_model= RFE(model_rf_best, n_features_to_select=10)\n",
     "print(rfe_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,14 +2384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8216666666666667\n"
+      "0.8038888888888889\n"
      ]
     }
    ],
