--- a/week4/ass/Genres_Feature(UNSOLD).ipynb
+++ b/week4/ass/Genres_Feature(UNSOLD).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "9           0.740            1.000        pop  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "       'bluegrass'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,16 +502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voting_classifier = VotingClassifier([('log_regression', logReg), ('knn', knn), ('svc', svc)])"
+    "voting_classifier = VotingClassifier([('log_regression', logReg), ('knn', knn), ('svc', svc)],  voting='hard')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "         flatten_transform=None, n_jobs=1, voting='hard', weights=None)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
       "                  dance       0.33      0.42      0.37       607\n",
       "dubstep & drum 'n' bass       0.17      0.08      0.11        78\n",
       "         easy listening       0.00      0.00      0.00        41\n",
-      "            electronica       0.17      0.07      0.10       389\n",
+      "            electronica       0.17      0.08      0.11       389\n",
       "            film scores       0.07      0.02      0.03        55\n",
       "                   folk       0.04      0.01      0.02       102\n",
       "                   funk       0.00      0.00      0.00       133\n",
@@ -599,11 +599,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/Data/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 0.741757, 0.07277399999999999, 129.985, 0.051254999999999995, 0.096732, 0.000474, 0, 4, 285.42667, -5.86, 0.5856300000000001, 0.730711, 0.271, 0.324, 0.8220000000000001, 1.0]\n",
+      "On The Floor\n",
+      "['dance']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "predict_proba is not available when voting='hard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-36f2a9374b97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msongs_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'album'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoting_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msongs_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'audio_features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoting_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msongs_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'audio_features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoting_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Volumes/Data/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/voting_classifier.py\u001b[0m in \u001b[0;36m_predict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    237\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvoting\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'hard'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m             raise AttributeError(\"predict_proba is not available when\"\n\u001b[0;32m--> 239\u001b[0;31m                                  \" voting=%r\" % self.voting)\n\u001b[0m\u001b[1;32m    240\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'estimators_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m         avg = np.average(self._collect_probas(X), axis=0,\n",
+      "\u001b[0;31mAttributeError\u001b[0m: predict_proba is not available when voting='hard'"
+     ]
+    }
+   ],
+   "source": [
+    "#tessting\n",
+    "# logReg.predict(X_test[20].reshape(1,-1))\n",
+    "# logReg.predict_proba(X_test[20].reshape(1,-1))\n",
+    "# logReg.classes_\n",
+    "test = 4\n",
+    "print(songs_dataset['audio_features'][test])\n",
+    "print(songs_dataset['album'][test])\n",
+    "print(voting_classifier.predict(np.array(songs_dataset['audio_features'][test]).reshape(1, -1)))\n",
+    "print(voting_classifier.predict_proba(np.array(songs_dataset['audio_features'][test]).reshape(1, -1)))\n",
+    "print(voting_classifier.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(model_voting_predictions, open('genres_features.pickle', 'wb'))"
+    "pickle.dump(voting_classifier, open('genres_features.pickle', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voting_classifier"
    ]
   },
   {
@@ -618,7 +677,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "songs_dataset.head(10)"
+   ]
   },
   {
    "cell_type": "code",
